home page 80% finished (need to add copy right and fix some dropdown animation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="index.style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +80,32 @@
     </section>
 
 
+    <section class="learn-anywhere">
+        <div class="learn-anywhere--content">
+            <p>Upgrade Your Skill</p>
+            <h1>Explore Our Course</h1>
+            <p>the quick brown fox jumps over the lazy dogs.
+                the quick brown fox jumps over the lazy dogs.
+                the quick brown fox jumps over the lazy dogs.
+            </p>
+            <div class="btn--courses">
+                <a href="#">Start Learning</a>
+                <a href="#">Try Demo</a>
+            </div>
+        </div>
+
+        <div class="learn-anywhere--garalley">
+            <img src="images/home/study-1.jpg" alt="">
+            <img src="images/home/study-2.jpg" alt="">
+            <img src="images/home/study-3.jpg" alt="">
+            <img src="images/home/study-4.jpg" alt="">
+            <img src="images/home/study-5.jpg" alt="">
+            <img src="images/home/study-6.jpg" alt="">
+        </div>
+    </section>
+
     <section class="out-of-oridinary">
+        <h1>We Are Just, Out Of Oridinary</h1>
         <div class="container">
             <div class="card">
                 <img src="/images/home/courses.svg" alt="">
@@ -100,6 +130,46 @@
         </div>
     </section>
 
+    <section class="online-course-for">
+        <h1>Online Learning <span>Design</span> For Real Life</h1>
+        <div class="card--group">
+            <div class="card-desc">
+                <img src="/images/home/courses.svg" alt="">
+                <h2>User Friendly Platform To Learn</h2>
+                <p>you can learn anywhere
+                    you can learn anywhere
+                    you can learn anywhere
+                </p>
+            </div>
+            <div class="card-desc">
+                <img src="/images/home/courses.svg" alt="">
+                <h2>Packed With Modern Technology</h2>
+                <p>you can learn anywhere
+                    you can learn anywhere
+                    you can learn anywhere
+                </p>
+            </div>
+        </div>
+    </section>
 
+
+    <section class="encrollment">
+        <div class="count-1">
+            <h1>1.5K+</h1>
+            <p>Success Stories</p>
+        </div>
+        <div class="count-1">
+            <h1>1.5K+</h1>
+            <p>Expert Instructors</p>
+        </div>
+        <div class="count-1">
+            <h1>1.5K+</h1>
+            <p>World Wide Students</p>
+        </div>
+        <div class="count-1">
+            <h1>1.5K+</h1>
+            <p>Trendy Subjects</p>
+        </div>
+    </section>
 </body>
 </html>
