course added (need to styling)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h1>The Best E-Learning Courses</h1>
                 <h1>For A Better World!</h1>
                 <p>Any Subject, on any language, on any devices, for all ages</p>
-                <button><a href="">Sign Up For Free</a></button>
+                <button><a href="#">Sign Up For Free</a></button>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
 
     <section class="learn-anywhere">
         <div class="learn-anywhere--content">
-            <p>Upgrade Your Skill</p>
+            <p class="skill">Upgrade Your Skill</p>
             <h1>Explore Our Course</h1>
             <p>the quick brown fox jumps over the lazy dogs.
                 the quick brown fox jumps over the lazy dogs.
@@ -176,7 +176,7 @@
 
     <footer>
         <div class="first-section">
-            <h1>About the store</h1>
+            <h1>About the Our Website</h1>
             <p>Home</p>
             <p>Become a customer</p>
             <p>About us</p>
@@ -214,6 +214,8 @@
             <p>Security and privacy</p>
             <p>New sletter</p>
         </div>
+
+        <p>2023 &copy;copyright All Rights Reversed</p>
     </footer>
 
 </body>
