course add need to change images

--- a/allcourse.html
+++ b/allcourse.html
@@ -23,25 +23,35 @@
         </div>
     </a>
 
-    <div class="profile">
-        <img src="images/courses-images/programmer-cat.jpg" alt="">
-        <h2>User Name</h2>
-        <p>programming2020ss@gmail.com</p>
-    </div>
+    <a class="profile-link" href="#">
+        <div class="profile">
+            <img src="images/courses-images/programmer-cat.jpg" alt="">
+            <h2>User Name</h2>
+            <p>programming2020ss@gmail.com</p>
+        </div>
+    </a>
 
     <div class="link--list">
+        
         <div class="link">
             <img src="/images/home/courses.svg" alt="">
-            <p>Course</p>
+            <a href="#">
+                <p>Course</p>
+            </a>
         </div>
         <div class="link">
             <img src="/images/home/courses.svg" alt="">
-            <p>Course</p>
+            <a href="#">
+                <p>Course</p>
+            </a>
         </div>
         <div class="link">
             <img src="/images/home/courses.svg" alt="">
-            <p>Logout</p>
+            <a href="#">
+                <p>Logout</p>
+            </a>
         </div>
+
     </div>
 
 </section>
@@ -52,8 +62,8 @@
 
 
     <div class="course--container">
-        <h1>Courses</h1>
         <div class="course--list">
+            <h1>All Courses: </h1>
             <a href="#">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
@@ -117,10 +127,53 @@
                 </div>
             </a>
         </div>
-    </div>
 
+
+
+
+    </div>
+    
 </main>
+
 </div>
 
+
+        <section class="recent--publish">
+            <h2>Recent Release:</h2>
+            <div class="course--group">
+                <div class="course-card">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <div class="course--content-card">
+                        <p>Programming <span>Oct 09, 2023</span></p>
+                        <h1>Object Oriented Programming</h1>
+                        <p>67 Lessons <span>40 hrs</span></p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <div class="course--content-card">
+                        <p>Programming <span>Oct 09, 2023</span></p>
+                        <h1>Object Oriented Programming</h1>
+                        <p>67 Lessons <span>40 hrs</span></p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <div class="course--content-card">
+                        <p>Programming <span>Oct 09, 2023</span></p>
+                        <h1>Object Oriented Programming</h1>
+                        <p>67 Lessons <span>40 hrs</span></p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <div class="course--content-card">
+                        <p>Programming <span>Oct 09, 2023</span></p>
+                        <h1>Object Oriented Programming</h1>
+                        <p>67 Lessons <span>40 hrs</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
