--- a/tutorial.html
+++ b/tutorial.html
@@ -67,7 +67,7 @@
                 <img src="/images/courses-images/programmer-cat.jpg" alt="" />
                 <p>Author <span>Pyae Hein</span></p>
               </div>
-              <a href="#">NEXT CHAPTER</a>
+              <a class="btn" href="#">NEXT CHAPTER</a>
             </div>
 
 
@@ -109,29 +109,29 @@
      
 
         <div class="tutorial--course-module">
-          <a href="#">Back</a>
+          <a class="btn" href="#">Back</a>
           <div class="module--list">
 
             <div class="module-1">
               <h3>Introduction</h3>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
+                <img src="/images/tools/correct.svg" alt="">
                 <p>Introduction</p>
                 <p>10:00</p>
               </div>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
+              <div class="tutorial-1 active">
+                <img src="/images/tools/pause.svg" alt="">
                 <p>How Internet Works</p>
                 <p>10:00</p>
               </div>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
+                <img src="/images/tools/play.svg" alt="">
                 <p>What we use HTML?</p>
                 <p>10:00</p>
               </div>
 
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
+                <img src="/images/tools/play.svg" alt="">
                 <p>Setting up editor</p>
                 <p>10:00</p>
               </div>
