user dashboard added

--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -57,7 +57,119 @@
           </section>
 
           <main>
-            <h1>Overview</h1>
+            <div class="course-overview">
+              <h2>Overview</h2>
+              <div class="card--group">
+                <div class="card">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Course In Progress</p>
+                  </div>
+                  <h1>20</h1>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Course In Progress</p>
+                  </div>
+                  <h1>20</h1>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Course In Progress</p>
+                  </div>
+                  <h1>20</h1>
+                </div>
+                <div class="card">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Course In Progress</p>
+                  </div>
+                  <h1>20</h1>
+                </div>
+                
+              </div>
+            </div>
+
+
+            <div class="course-section">
+              <h2>Course You're Taking</h2>
+              <div class="course-list">
+
+                <div class="course-list-title">
+                  <p>Course Title</p>
+                  <p>Lessons Completed</p>
+                  <p>Duration</p>
+                  <p>Instructor</p>
+                </div>
+
+                <div class="course-info">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Object Oriented Programming</p>
+                  </div>
+                  <p>18/40(48%)</p>
+                  <p>24h 13m 28s</p>
+                  <div class="instructor">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <p>Pyae Hein</p>
+                  </div>
+                </div>
+                <div class="course-info">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Object Oriented Programming</p>
+                  </div>
+                  <p>18/40(48%)</p>
+                  <p>24h 13m 28s</p>
+                  <div class="instructor">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <p>Pyae Hein</p>
+                  </div>
+                </div>
+                <div class="course-info">
+                  <div class="card-content">
+                    <img src="/images/tools/complete.svg" alt="">
+                    <p>Object Oriented Programming</p>
+                  </div>
+                  <p>18/40(48%)</p>
+                  <p>24h 13m 28s</p>
+                  <div class="instructor">
+                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <p>Pyae Hein</p>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+
+
+            <div class="recommended-section">
+              <h2>Recommended Courses</h2>
+              <div class="recommended-card-group">
+                <div class="recommended-card">
+                <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                <p><span>Programming</span></p>
+                <p>Front-end Development</p>
+                <p>30 Lessons | 83 Hours</p>
+              </div>
+              <div class="recommended-card">
+                <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                <p><span>Programming</span></p>
+                <p>Front-end Development</p>
+                <p>30 Lessons | 83 Hours</p>
+              </div>
+              <div class="recommended-card">
+                <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                <p><span>Programming</span></p>
+                <p>Front-end Development</p>
+                <p>30 Lessons | 83 Hours</p>
+              </div>
+              </div>
+              
+            </div>
           </main>
     </div>
 </body>
