user register, login, logout page added and course image added

--- a/allcourse.html
+++ b/allcourse.html
@@ -23,7 +23,7 @@
         </div>
     </a>
 
-    <a class="profile-link" href="#">
+    <a class="profile-link" href="user_dashboard.html">
         <div class="profile">
             <img src="images/courses-images/programmer-cat.jpg" alt="">
             <h2>User Name</h2>
@@ -42,12 +42,12 @@
         <div class="link">
             <img src="/images/home/courses.svg" alt="">
             <a href="#">
-                <p>Course</p>
+                <p>Upcoming</p>
             </a>
         </div>
         <div class="link">
             <img src="/images/home/courses.svg" alt="">
-            <a href="#">
+            <a href="logout.html">
                 <p>Logout</p>
             </a>
         </div>
@@ -57,7 +57,7 @@
 </section>
 <main>
     <div class="search--bar">
-        <input type="text">
+        <input type="text" placeholder="search courses">
     </div>
 
 
@@ -66,63 +66,61 @@
             <h1>All Courses: </h1>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/oop_python.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming<span>Feb 09, 2023</span></p>
+                        <h1>Object Oriented Programming In Python</h1>
+                        <p>47 Lessons <span>20 hrs</span></p>
                     </div>        
                 </div>
             </a>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/computerscience.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Oct 09, 2022</span></p>
+                        <h1>Introduction to Computer Science</h1>
+                        <p>77 Lessons <span>16 hrs</span></p>
                     </div>        
                 </div>
             </a>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/english.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming
-                            Object Oriented Programming
-                        </h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Language <span>Aug 19, 2021</span></p>
+                        <h1>Learn English From Beginner to Native</h1>
+                        <p>89 Lessons <span>60 hrs</span></p>
                     </div>        
                 </div>
             </a>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/mathematics.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Logical <span>Jan 11, 2023</span></p>
+                        <h1>Learn Discrete Mathematics</h1>
+                        <p>81 Lessons <span>42 hrs</span></p>
                     </div>        
                 </div>
             </a>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/frontend.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Dec 29, 2022</span></p>
+                        <h1>Learn Frontend Technologies to Build your Own Website</h1>
+                        <p>69 Lessons <span>30.5 hrs</span></p>
                     </div>        
                 </div>
             </a>
             <a href="#">
                 <div class="course">
-                    <img class="course--img" src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img class="course--img" src="/images/courses-images/robotics.png" alt="">
                     <div class="course--content">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Jun 11, 2022</span></p>
+                        <h1>Introduction to Robotics</h1>
+                        <p>55 Lessons <span>18 hrs</span></p>
                     </div>        
                 </div>
             </a>
@@ -142,35 +140,35 @@
             <h2>Recent Release:</h2>
             <div class="course--group">
                 <div class="course-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/backend.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Jun 27, 2023</span></p>
+                        <h1>Learn Backend Technologies</h1>
+                        <p>77 Lessons <span>52 hrs</span></p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/oop_python.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Feb 09, 2023</span></p>
+                        <h1>Object Oriented Programming In Python</h1>
+                        <p>47 Lessons <span>20 hrs</span></p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/computerscience.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <p>Programming <span>Oct 09, 2022</span></p>
+                        <h1>Introduction to Computer Science</h1>
+                        <p>77 Lessons <span>16 hrs</span></p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/mathematics.png" alt="">
                     <div class="course--content-card">
                         <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Object Oriented Programming</h1>
-                        <p>67 Lessons <span>40 hrs</span></p>
+                        <h1>Learn Discrete Mathematics</h1>
+                        <p>81 Lessons <span>42 hrs</span></p>
                     </div>
                 </div>
             </div>
