--- a/tutorial.html
+++ b/tutorial.html
@@ -24,7 +24,7 @@
           </div>
         </a>
 
-        <a class="profile-link" href="#">
+        <a class="profile-link" href="user_dashboard.html">
           <div class="profile">
             <img src="images/courses-images/programmer-cat.jpg" alt="" />
             <h2>User Name</h2>
@@ -35,19 +35,19 @@
         <div class="link--list">
           <div class="link">
             <img src="/images/home/courses.svg" alt="" />
-            <a href="#">
-              <p>Course</p>
+            <a href="allcourse.html">
+              <p>Courses</p>
             </a>
           </div>
           <div class="link">
             <img src="/images/home/courses.svg" alt="" />
             <a href="#">
-              <p>Course</p>
+              <p>Upcoming</p>
             </a>
           </div>
           <div class="link">
             <img src="/images/home/courses.svg" alt="" />
-            <a href="#">
+            <a href="logout.html">
               <p>Logout</p>
             </a>
           </div>
